Started implementing the color changer logic

--- a/index.html
+++ b/index.html
@@ -25,11 +25,13 @@
         <input id="controls-stroke-width" type="range" min="1" max="20">
         <button id="controls-shortcuts-btn" onclick="shortcutsHandler.showShortcuts()">Shortcuts</button>
         <div id="controls-display-shortcuts"></div>
+        <span id="controls-typed-text"></span>
     </div>
 
     <canvas id="canvas"></canvas>
 
     <script src="./shortcutsHandler.js"></script>
     <script src="./index.js"></script>
+    <script src="./scripts/toastr.min.js"></script>
 </body>
 </html>
