Implemented color shorthands and refactored into the new typeHandler file

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 
     <canvas id="canvas"></canvas>
 
+    <script src="./typeHandler.js"></script>
     <script src="./shortcutsHandler.js"></script>
     <script src="./index.js"></script>
 </body>
